--- a/.htaccess
+++ b/.htaccess
@@ -6,10 +6,11 @@
     RewriteEngine On
 
     # Redirect Trailing Slashes...
-    RewriteRule ^(.*)/$ /$1 [L,R=301]
-
-    # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule ^(.*)$ /public/index.php/$1 [L]
+
+    # Handle Front Controller...
+
+    
 </IfModule>
