--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,10 @@
 
     RewriteEngine On
 
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_URI} ^.*\.(css|gif|jpg)
+    RewriteRule ^(.*)$ /public/$1 [L]
+
     # Redirect Trailing Slashes...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
